<resources>
    <string name="app_name">innocent</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_account">账号</string>
    <string name="tv_password">密码</string>
    <string name="tv_password_repeat">重复密码</string>
    <string name="et_account_hint">请输入账号</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_password_again_hint">请再次输入密码</string>
    <string name="btn_login">登  录</string>
    <string name="bottom_vertical_line">|</string>
    <string name="bottom_fetch_password">找回密码</string>
    <string name="bottom_register">注册账号</string>
    <string name="choose_from_album">从相册选取</string>
    <string name="choose_from_camera">从相机选取</string>
    <string name="tv_sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tv_age">年龄</string>
    <string name="et_age_hint">请输入年龄</string>
    <string name="btn_submit">提 交</string>
    <string name="btn_modify">修 改</string>
    <string name="friends_group">好友分组</string>
    <string name="life_service">生活服务</string>
    <string name="btn_back_message">消息(0)</string>
    <string name="et_chat_content_hint">输入聊天内容</string>
    <string name="btn_send_message">发送</string>
    <string name="title_activity_login">登陆界面</string>
    <string name="pl_dir">/storage/emulated/0/download/</string>
    <string name="pl_load">加载插件</string>

    <string name="loading">正在加载插件，请稍候\u2026</string>
    <string name="dialod_loading_title">请稍候\u2026</string>
    <string name="dialod_loading_body">正在加载插件\u2026</string>

    <string name="plug_icon_desc">插件图标</string>
    <string name="hint_search_friend">请输入关键字</string>
    <string name="default_toolbar_title">标题</string>
</resources>
