<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <!-- account, password and login button -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" >

        <org.jackform.customwidget.CircleImageView
            android:id="@+id/image_header"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:border_color="@android:color/black"
            app:border_width="7dp"
            android:src="@mipmap/head_image" />

        <org.jackform.innocent.widget.AccountEditText
            android:id="@+id/et_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_account_hint"
            android:padding="10dp"
            app:met_iconLeft="@drawable/account"
            app:met_iconPadding="0dp" />

        <org.jackform.innocent.widget.PasswordEditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="-10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/et_password_hint"
            app:met_iconLeft="@drawable/password"
            app:met_iconPadding="0dp" />

        <org.jackform.customwidget.RippleView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:rv_color="@color/background_floating_material_dark"
            app:rv_type="rectangle"
            app:rv_zoom="true"
            app:rv_alpha="133"
            app:rv_rippleDuration="250">
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_shape"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />
        </org.jackform.customwidget.RippleView>
        <!--
        <org.jackform.customwidget.material.widget.ProgressView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:pv_autostart="true"
            app:pv_circular="true"
            />
        -->
    </LinearLayout>
    <!-- base line , fetch password and register account -->

    <TextView
        android:id="@+id/bottom_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_vertical_line"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/fetch_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/bottom_base"
        android:text="@string/bottom_fetch_password"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/bottom_base"
        android:text="@string/bottom_register"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</RelativeLayout>